--- a/index.html
+++ b/index.html
@@ -45,52 +45,59 @@
 
 
     <div class="container text-center p-3 m-5 border bg-light ">
-        <div class="row-cols-4 flex-row">
-
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и
-                        составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width: 10rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Заголовок карточки</h5>
+                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
+                                карточки и
+                                составлять основную часть содержимого карты.</p>
+                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                        </div>
+                    </div>
                 </div>
+                <div class="col">
+                    <div class="card" style="width: 10rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Заголовок карточки</h5>
+                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
+                                карточки и
+                                составлять основную часть содержимого карты.</p>
+                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 10rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Заголовок карточки</h5>
+                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
+                                карточки и
+                                составлять основную часть содержимого карты.</p>
+                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 10rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Заголовок карточки</h5>
+                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
+                                карточки и
+                                составлять основную часть содержимого карты.</p>
+                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                        карточки и
-                        составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                        карточки и
-                        составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                        карточки и
-                        составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                </div>
-            </div>
-
-        </div>
 
 
 
@@ -118,13 +125,14 @@
 
 
 
-
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-        </script>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous">
+            </script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous">
+            </script>
 </body>
 
 </html>
