--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="card" style="width: 10rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Заголовок карточки</h5>
                             <p class="card-text">Небольшой пример текста, который должен основываться на названии
@@ -60,8 +60,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 10rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Заголовок карточки</h5>
                             <p class="card-text">Небольшой пример текста, который должен основываться на названии
@@ -72,8 +72,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 10rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="cub">
                         <div class="card-body">
                             <h5 class="card-title">Заголовок карточки</h5>
                             <p class="card-text">Небольшой пример текста, который должен основываться на названии
@@ -84,8 +84,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 10rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Заголовок карточки</h5>
                             <p class="card-text">Небольшой пример текста, который должен основываться на названии
