--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class=".container-{breakpoint}">
         <nav class="row-12">
             <nav class="navbar bg-dark text-white">
-                <div class="col-6">Start Bootstrap</div>
+                <div class="col-6 p-3">Start Bootstrap</div>
                 <div class="col">Home</div>
                 <div class="col">About</div>
                 <div class="col">Services</div>
@@ -27,46 +27,34 @@
         </nav>
     </header>
 
-    <main class="container p-3 m-5 border bg-light">
+    <main class="container overflow-hidden m-5 border bg-light">
         <div class="row align-items-center px-5">
             <div class="col-12">
                 <h1>A Warm Welcome </h1>
             </div>
             <div class="col-12">
-                харьковским Сельскохозяйственным обществом устраивается общерусская сельскохозяйственная выставка (5–15
-                октября) «с конкурсным испытанием пахотных орудий и молотилок. Тогда же положено было начало ежегодным
-                выставкам сельскохозяйственных семян…»
+                A small example of a text that should be based on the name of the card
+                and make up the main part of the contents of the card.A small example of a text that should be based on
+                the name of the card
+                and make up the main part of the contents of the card.
             </div>
-            <div class="col-12 p -3">
+            <div class="col-12 p-3">
                 <button type="button" class="btn btn-primary">Call to action</button>
             </div>
         </div>
     </main>
 
 
-    <div class="container text-center p-3 m-5 border bg-light ">
-        <div class="container">
+    <div class="container overflow-hidden m-5 text-center">
+        <div class="d-flex justify-content-between">
             <div class="row">
                 <div class="col">
                     <div class="card">
-                        <img src="assect/img/cub.webp" class="card-img-top" alt="...">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="cub">
                         <div class="card-body">
-                            <h5 class="card-title">Заголовок карточки</h5>
-                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                                карточки и
-                                составлять основную часть содержимого карты.</p>
-                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assect/img/cub.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Заголовок карточки</h5>
-                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                                карточки и
-                                составлять основную часть содержимого карты.</p>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">A small example of a text that should be based on the name of the card
+                                and make up the main part of the contents of the card.</p>
                             <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
                         </div>
                     </div>
@@ -75,28 +63,46 @@
                     <div class="card">
                         <img src="assect/img/cub.webp" class="card-img-top" alt="cub">
                         <div class="card-body">
-                            <h5 class="card-title">Заголовок карточки</h5>
-                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                                карточки и
-                                составлять основную часть содержимого карты.</p>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">A small example of a text that should be based on the name of the card
+                                and make up the main part of the contents of the card.</p>
                             <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assect/img/cub.webp" class="card-img-top" alt="...">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="cub">
                         <div class="card-body">
-                            <h5 class="card-title">Заголовок карточки</h5>
-                            <p class="card-text">Небольшой пример текста, который должен основываться на названии
-                                карточки и
-                                составлять основную часть содержимого карты.</p>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">A small example of a text that should be based on the name of the card
+                                and make up the main part of the contents of the card.</p>
                             <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
                         </div>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assect/img/cub.webp" class="card-img-top" alt="cub">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">A small example of a text that should be based on the name of the card
+                                and make up the main part of the contents of the card.</p>
 
+                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <footer class="container-{breakpoint}">
+        <div class="row">
+            <div class="col bg-dark text-white text-center p-3">
+                Copyright &#169 Your Webside 2019
+            </div>
+        </div>
+    </footer>
 
 
 
@@ -122,17 +128,12 @@
 
 
 
-
-
-
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous">
-            </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-                crossorigin="anonymous">
-            </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
