--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="container overflow-hidden m-5 border bg-light">
-        <div class="row align-items-center px-5">
+        <div class="row align-items-center p-5 ">
             <div class="col-12">
                 <h1>A Warm Welcome </h1>
             </div>
@@ -55,7 +55,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">A small example of a text that should be based on the name of the card
                                 and make up the main part of the contents of the card.</p>
-                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                            <a href="#" class="btn btn-primary">Find Out More!</a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">A small example of a text that should be based on the name of the card
                                 and make up the main part of the contents of the card.</p>
-                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                            <a href="#" class="btn btn-primary">Find Out More!</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">A small example of a text that should be based on the name of the card
                                 and make up the main part of the contents of the card.</p>
-                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                            <a href="#" class="btn btn-primary">Find Out More!</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                             <p class="card-text">A small example of a text that should be based on the name of the card
                                 and make up the main part of the contents of the card.</p>
 
-                            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+                            <a href="#" class="btn btn-primary">Find Out More!</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
     </div>
     <footer class="container-{breakpoint}">
         <div class="row">
-            <div class="col bg-dark text-white text-center p-3">
+            <div class="col bg-dark text-white text-center p-5">
                 Copyright &#169 Your Webside 2019
             </div>
         </div>
