--- a/indexpagetwo.html
+++ b/indexpagetwo.html
@@ -6,4 +6,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assect/img/stylescss/styles.css">
 </head>
+
+<body>
+
+    <div class="header-browser">
+        <img class="header__browser" src="assect/img/browser.png">
+    </div>
+    <div class="header-container">
+        <div class="header-container__logo"> <img src="assect/img/logo.png" alt="logo" /> </div>
+        <div class="header-container__buttom"><img src="assect/img/button-cart.png" alt="box" />
+        </div>
+    </div>
+
+    <h1 class="TitlePage">ВОЗМОЖНОСТИ</h1>
+
+
+    <div class="container__section">
+        <section class="card">
+            <div class="card__border_red">
+                <img class="card__picture" src="assect/img/Illustration_4(1).png" />
+                <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
+                <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
+                    помещение,
+                    чтобы расставить трекеры.</p>
+            </div>
+        </section>
+
+        <section class="card">
+            <img class="card__picture" src="assect/img/Illustration_4(1).png" />
+            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
+            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
+                помещение,
+                чтобы расставить трекеры.</p>
+        </section>
+
+        <section class="card">
+            <img class="card__picture" src="assect/img/Illustration_4(1).png" />
+            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
+            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
+                помещение,
+                чтобы расставить трекеры.</p>
+        </section>
+
+        <section class="card">
+            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
+            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
+                помещение,
+                чтобы расставить трекеры.</p>
+        </section>
+
+        <section class="card">
+            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
+            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
+                помещение,
+                чтобы расставить трекеры.</p>
+        </section>
+
+        <div class="ContainerCardNews">
+            <div class="CardNews">
+                <div class="cardNews__title">Новости</div>
+                <div class="cardNews__input">
+                    <input type=" text" value="эл.почта" /> </div>
+                <button class="CardNews_button">подписаться</button>
+            </div>
+        </div>
+
+
+
+    </div>
+
+    </div>
+
+
+
+
+
+
+
+
+</body>
+
+</html>
