--- a/indexpagetwo.html
+++ b/indexpagetwo.html
@@ -36,48 +36,50 @@
 
         <section class="card">
             <img class="card__picture" src="assect/img/Illustration_4(1).png" />
-            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
-            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
-                помещение,
-                чтобы расставить трекеры.</p>
+            <h1 class="card__h1_bold">БЕЗ КОМПЬЮТЕРА</h1>
+            <p class="card__p">Современным VR-шлемам нужен мощный компьютер, чтобы запускать игры. Наш шлем запускает
+                игры из облака, поэтому просто наслаждайтесь..</p>
         </section>
 
         <section class="card">
             <img class="card__picture" src="assect/img/Illustration_4(1).png" />
-            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
-            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
-                помещение,
-                чтобы расставить трекеры.</p>
+            <h1 class="card__h1_bold">ДО 10 ЧАСОВ РАБОТЫ</h1>
+            <p class="card__p">Несмотря на компактность и производительность, шлем может работать до 10 часов — даже,
+                если вы играете в самые ресурсоемкие игры.</p>
         </section>
 
         <section class="card">
-            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
-            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
-                помещение,
-                чтобы расставить трекеры.</p>
+            <div class="card__border_rednoimg">
+                <h1 class="card__h1_bold">СОТНИ ИГР</h1>
+                <p class="card__p">Уже сейчас вам доступно более сотни игр: от высокобюджетных ААА-тайтлов до маленьких
+                    независимых проектов. Скоро их станет еще больше.</p>
+            </div>
         </section>
 
         <section class="card">
-            <h1 class="card__h1_bold">БЕЗ ПРОВОДОВ</h1>
-            <p class="card__p">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее питание, ни большое
-                помещение,
-                чтобы расставить трекеры.</p>
+            <h1 class="card__h1_bold">ПОЧТИ ДАРОМ</h1>
+            <p class="card__p">По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы существенно экономите на
+                мощном компьютере.</p>
         </section>
 
         <div class="ContainerCardNews">
             <div class="CardNews">
                 <div class="cardNews__title">Новости</div>
                 <div class="cardNews__input">
-                    <input type=" text" value="эл.почта" /> </div>
-                <button class="CardNews_button">подписаться</button>
+                    <input class="cardNews__input_fon" type="text" value="эл.почта" /> </div>
+                <button class="CardNews__button">подписаться</button>
             </div>
         </div>
 
+        <footer class="footer">
+            <nav class="navigation">
+                <a class="navigation__href" href="#">Возможности</a>
+                <a class="navigation__href" href="#">Где купить</a>
+                <a class="navigation__href" href="#">Доставка</a>
+                <a class="navigation__href" href="#">Помощь</a>
+            </nav>
+        </footer>
 
-
-    </div>
-
-    </div>
 
 
 
