--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class=".container-{breakpoint}">
+    <header class=".container-breakpoint">
         <nav class="row-12">
             <nav class="navbar bg-dark text-white">
                 <div class="col-6 p-3">Start Bootstrap</div>
