--- a/indexpagetwo.html
+++ b/indexpagetwo.html
@@ -30,13 +30,13 @@
             </div>
         </section>
         <section class="card">
-            <img class="card__picture" src="assect/img/Illustration_4(1).png" />
+            <img class="card__picture" src="assect/img/Illustration_2.png" />
             <h1 class="card__h1_bold">БЕЗ КОМПЬЮТЕРА</h1>
             <p class="card__p">Современным VR-шлемам нужен мощный компьютер, чтобы запускать игры. Наш шлем запускает
                 игры из облака, поэтому просто наслаждайтесь..</p>
         </section>
         <section class="card">
-            <img class="card__picture" src="assect/img/Illustration_4(1).png" />
+            <img class="card__picture" src="assect/img/Illustration_9.png" />
             <h1 class="card__h1_bold">ДО 10 ЧАСОВ РАБОТЫ</h1>
             <p class="card__p">Несмотря на компактность и производительность, шлем может работать до 10 часов — даже,
                 если вы играете в самые ресурсоемкие игры.</p>
